cmake_minimum_required(VERSION 3.0)
project(pas CXX)
set(CMAKE_CXX_FLAGS "-g	-Wall")
set(CMAKE_CXX_COMPILER "clang++")
SET(CMAKE_BUILD_TYPE Debug)
#set(CMAKE_VERBOSE_MAKEFILE on)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
include_directories(${CMAKE_SOURCE_DIR}/..)
link_directories(${CMAKE_BINARY_DIR}/lib)
add_subdirectory(base)
add_subdirectory(net)

message("-- CMAKE_SOURCE_DIR: " ${CMAKE_SOURCE_DIR})
message("-- CMAKE_BINARY_DIR: " ${CMAKE_BINARY_DIR})
message("-- CMAKE_CURRENT_SOURCE_DIR: " ${CMAKE_CURRENT_SOURCE_DIR})
message("-- CMAKE_CURRRENT_BINARY_DIR: " ${CMAKE_CURRRENT_BINARY_DIR})
message("-- CMAKE_CURRENT_LIST_FILE: " ${CMAKE_CURRENT_LIST_FILE})
message("-- CMAKE_BUILD_TYPE: " ${CMAKE_BUILD_TYPE})
message("-- CMAKE_INCLUDE_PATH: " ${CMAKE_INCLUDE_PATH})
message("-- CMAKE_LIBRARY_PATH: " ${CMAKE_LIBRARY_PATH})
message("-- CMAKE_MODULE_PATH: " ${CMAKE_MODULE_PATH})
message("-- CMAKE_INSTALL_PREFIX: " ${CMAKE_INSTALL_PREFIX})
message("-- BUILD_SHARED_LIBS: " ${BUILD_SHARED_LIBS})

message("-- CMAKE_VERBOSE_MAKEFILE: " ${CMAKE_VERBOSE_MAKEFILE})
message("-- CMAKE_CXX_FLAGS_DEBUG: " ${CMAKE_CXX_FLAGS_DEBUG})
message("-- CMAKE_CXX_FLAGS_RELEASE: " ${CMAKE_CXX_FLAGS_RELEASE})
message("-- EXECUTABLE_OUTPUT_PATH: " ${EXECUTABLE_OUTPUT_PATH})
message("-- LIBRARY_OUTPUT_PATH: " ${LIBRARY_OUTPUT_PATH})